src/objects/ZPAPER__zpaper__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>zPaper preferences and other settings</description>
    <fields>
        <fullName>ZPAPER__Home_Service_Page__c</fullName>
        <defaultValue>&quot;/kb/jsp/SF_kbGreetings.jsp&quot;</defaultValue>
        <description>JSP that creates KB sessions and may also do a useful SF operation like capture drag and drops or searches like in /kb/jsp/SF_getCaseReferences.jsp</description>
        <label>Home_Service_Page</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__activated__c</fullName>
        <defaultValue>true</defaultValue>
        <description>can control VF visibility settings</description>
        <label>activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZPAPER__server__c</fullName>
        <defaultValue>&quot;sb14.zpaper.com&quot;</defaultValue>
        <description>KBin server</description>
        <label>server</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>zpaper</label>
</CustomObject>